--- a/static/sass/_trumps.utilities.scss
+++ b/static/sass/_trumps.utilities.scss
@@ -91,6 +91,10 @@ div[class*="col-sm"] {
 .relative {
     position: relative;
 }
+.u-relative {
+    position: relative;
+}
+
 .no-padding {
     padding: 0;
 }
