fix adding and deleting managed users

--- a/static/sass/components/_component.signin-modal.scss
+++ b/static/sass/components/_component.signin-modal.scss
@@ -62,6 +62,9 @@
         margin-top: 25px;
     }
 
+    &__message {
+        line-height: 1.4;
+    }
     .login-form__forgot {
         margin-bottom: 0;
         font-family: $secondaryFont;
