--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -452,15 +452,21 @@
                                         <div class="cus_acnt-col-12 cus_acnt-col-lg-8 mx-auto">
                                             {% set usersLeft = totalPlanUserCount > 0 ? totalPlanUserCount -1 : totalPlanUserCount %}
                                             <div class="cus_acnt__user__addition">
-                                                <aside class="cus_acnt__user__addition-btn">
-                                                    <a id="addManagedUser" href="javascript:;" class="cus_acnt__btn cus_acnt__btn__bordered">Add user</a>
+
+                                                {% set addUserClass = "" %}
+                                                {% if managedUserCount >= totalPlanUserCount %}
+                                                    {% set addUserClass = "u-hide" %}
+                                                {% endif %}
+
+                                                <aside class="cus_acnt__user__addition-btn  ">
+                                                    <a id="addManagedUser" href="javascript:;" class="cus_acnt__btn cus_acnt__btn__bordered js-addUserButton {{addUserClass}}">Add user</a>
                                                 </aside>
                                                 <aside class="cus_acnt__user__allot-wrap">
                                                     <span class="cus_acnt__user__allot-wrap--image">
-                                                        <img src="{{networkData.templatePath}}/static/icons/user_icon.png"" alt="user" class="img-fluid" />
+                                                        <img src="{{networkData.templatePath}}/static/icons/user_icon.png" alt="user" class="img-fluid" />
                                                     </span>
                                                     <span class="cus_acnt__user__allot-wrap--text">Allocated users:</span>
-                                                    <span class="cus_acnt__user__allot-wrap--text strong">{{managedUserCount}} of {{totalPlanUserCount}}</span>
+                                                    <span class="cus_acnt__user__allot-wrap--text strong js-usercount">{{managedUserCount}} of {{totalPlanUserCount}}</span>
                                                 </aside>
                                             </div>
                                             <div class="cus_acnt__user__addSec">
@@ -483,7 +489,7 @@
                                                             <span>
                                                                 <img src="{{networkData.templatePath}}/static/icons/icons-navigation-search.svg" />
                                                             </span>
-                                                            <input id="managed-user-search-field" name="s" type="text" placeholder="Find a user" class="cus_acnt__form__input" required="" />
+                                                            <input id="managed-user-search-field" name="s" type="text" placeholder="Search users" class="cus_acnt__form__input" required="" />
                                                         </div>
                                                         <div class="cus_acnt__user-grid__search--btn">
                                                             <button type="submit" class="cus_acnt__btn cus_acnt__btn__solid" type="submit" id="user-search-submit">Search</button>
@@ -495,7 +501,7 @@
                                                     Showing {{managedUserCount}} {{resultString}}
                                                 </div>
                                             {% endif %}
-                                            <div id="user_profile"">
+                                            <div id="user_profile">
                                                 <ul id="mangedUsers" class="cus_acnt__user-grid__list">
                                                     {% if managedUserCount == 0 %}
                                                         <li id="nousers" class="no-data">No users found</li>
