--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -199,6 +199,7 @@
 
 
                             {% set managedUserCount = managedUsers | length %}
+
                             {% if managedUsersObj['totalCount'] is defined %}
                                 {% set managedUserCount = managedUsersObj['totalCount'] %}
                             {% endif %}
@@ -493,12 +494,13 @@
                                                         </div>
                                                         <div class="cus_acnt__user-grid__search--btn">
                                                             <button type="submit" class="cus_acnt__btn cus_acnt__btn__solid" type="submit" id="user-search-submit">Search</button>
+                                                            {# <button type="submit" class="cus_acnt__btn cus_acnt__btn__solid" type="submit" id="user-search-submit">Clear</button> #}
                                                         </div>
                                                     </form>
                                                 </div>
                                                 <div class="cus_acnt__user-grid__show-user">
-                                                    {% set resultString = managedUserCount < 2 ? 'user' : 'users' %}
-                                                    Showing {{managedUserCount}} {{resultString}}
+                                                    {% set resultString = managedUserScreenCount < 2 ? 'user' : 'users' %}
+                                                    Showing {{managedUserScreenCount}} {{resultString}}
                                                 </div>
                                             {% endif %}
                                             <div id="user_profile">
@@ -527,17 +529,12 @@
 
                                                 </ul>
 
-                                                {% if totalPlanUserCount > userLimit and managedUserScreenCount >= userLimit %} 
 
+                                                {% if totalPlanUserCount > userLimit and managedUserScreenCount >= userLimit %} 
                                                     {{ this.render('partials/ajaxarticles_new.twig', {
                                                         name            : "user-load",
-                                                        limit           : userLimit,
-                                                        label           : "Show more",
-                                                        loadtype        : "user",
-                                                        container       : "mangedUsers",
-                                                        card_class      : "userdetails",
                                                         buttonClass     : "managed-users__more",
-                                                        cardTemplate    : "managed_user",
+                                                        label           : "Load more"
                                                     }) | raw }}
 
                                                 {% endif %}
@@ -566,12 +563,13 @@
         Acme.userFeed = new Acme.View.UserFeed({
             model: usercard, 
             limit: "{{userLimit}}",
-            offset: 20, 
-            container: $('#mangedUsers'),
+            offset: "{{userLimit}}", 
             loadtype: 'user',
-            inifinte: false, 
             failtext: null, 
-            controller: Acme.userController
+            template: 'managed_user',
+            container: $('#mangedUsers'),
+            controller: Acme.userController,
+            card_class: "userdetails",
         });
     });
 </script>
