--- a/article.twig
+++ b/article.twig
@@ -78,46 +78,43 @@ article.additionalInfo.image_crop == 'full' %}
 
 {% if showPaywall == true %}
 
-{% set storySplit = ArticleContent | split('</p>') %}
-{% set para2 = storySplit[1] | slice(0, 80) ~ '</p>' %}
-{% set ArticleContent = [storySplit[0], para2] | join('</p>') %}
+    {% set storySplit = ArticleContent | split('</p>') %}
+    {% set para2 = storySplit[1] | slice(0, 80) ~ '</p>' %}
+    {% set ArticleContent = [storySplit[0], para2] | join('</p>') %}
 
-{% set plans = _Paywall.getActiveNetworkPaywallPlans() %}
-{% for plan in plans %}
-{% if plan.trial_status == "1" %}
-{% set trialToggle = true %}
-{% endif %}
-{% endfor %}
+    {% set plans = _Paywall.getActiveNetworkPaywallPlans() %}
+    {% for plan in plans %}
+        {% if plan.trial_status == "1" %}
+            {% set trialToggle = true %}
+        {% endif %}
+    {% endfor %}
 
 {% else %}
 {# Only grab these if article is not paywalled #}
 
-{% if config['inventory']['articleAd'] is defined %}
-{% set adPos = config['inventory']['articleAd'] %}
+    {% if config['inventory']['articleAd'] is defined %}
+        {% set adPos = config['inventory']['articleAd'] %}
 
-{% set storySplit = ArticleContent | split('<p>') %}
+        {% set storySplit = ArticleContent | split('<p>') %}
 
-    {% if storySplit[(adPos['position'] * 2) - 1] %}
-    {% if adPos['slot'] is defined %}
-    {% set inarticleslot = adPos['slot'] %}
-    {% set ArticleContent = '
-<p>' %}
-    {% for para in storySplit %}
-    {% set ArticleContent = ArticleContent ~ '
-<p>' ~ para %}
-    {% if loop.index == adPos['position'] %}
-    {% set ArticleContent = ArticleContent ~ '
-<div class="u-margin-top-30 u-margin-bottom-30 '~ adPos['class'] ~'">
-    <div class="j-adslot" id="' ~ inarticleslot ~ '" data-adshape="banner"></div>
-</div>' %}
-{% endif %}
-{% endfor %}
-{% endif %}
-
-{% endif %}
-{% endif %}
-{% set recentArticles = _Article.getRecentArticles({ blogId: article.blog.id, limit: 4, excludeArticleIds : [article.id], interval: 168 }) %}
-{% set popularArticles = _Article.getPopularArticles({  limit: 4,  sortBy: 'VIEWS', scope: 'network'  }) %}
+        {% if storySplit[(adPos['position'] * 2) - 1] %}
+            {% if adPos['slot'] is defined %}
+                {% set inarticleslot = adPos['slot'] %}
+                {% set ArticleContent = '<p>' %}
+                {% for para in storySplit %}
+                    {% set ArticleContent = ArticleContent ~ '<p>' ~ para %}
+                    {% if loop.index == adPos['position'] %}
+                        {% set ArticleContent = ArticleContent ~ '
+                            <div class="u-margin-top-30 u-margin-bottom-30 '~ adPos['class'] ~'">
+                                <div class="j-adslot" id="' ~ inarticleslot ~ '" data-adshape="banner"></div>
+                            </div>' %}
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+        {% endif %}
+    {% endif %}
+    {% set recentArticles = _Article.getRecentArticles({ blogId: article.blog.id, limit: 4, excludeArticleIds : [article.id], interval: 168 }) %}
+    {% set popularArticles = _Article.getPopularArticles({  limit: 4,  sortBy: 'VIEWS', scope: 'network'  }) %}
 {% endif %}
 
 
@@ -141,8 +138,7 @@ article.additionalInfo.image_crop == 'full' %}
 
 
 
-{% set profileImg = _Media.getMediaUrl(article.createdBy['media'], 100, 100, {radius: 'max', gravity: 'face', 'crop':
-'thumb', type: 'user'}) %}
+{% set profileImg = _Media.getMediaUrl(article.createdBy['media'], 100, 100, {radius: 'max', gravity: 'face', 'crop':'thumb', type: 'user'}) %}
 {% set publishDate = _AppHelper.getDefaultTimezoneDateTime(article.publishDate, 'F, Y') %}
 {% set updateDate = _AppHelper.getDefaultTimezoneDateTime(article.updatedDateTime,'F j, Y') %}
 
