remove account delete message

--- a/edit-profile.twig
+++ b/edit-profile.twig
@@ -256,7 +256,7 @@
                                                 </div>
                                             <div class="cus_acnt__subInfo">
                                                 {% if pwstats['status'] == 'cancelled' %}
-                                                    <div class="cus_acnt__subInfo__article-info">Your account will be permanently deleted 30 days after the most recent payment date.</div>
+                                                    {# <div class="cus_acnt__subInfo__article-info">Your account will be permanently deleted 30 days after the most recent payment date.</div> #}
                                                     <a href="javascript:;" id='cancelAccount' class="cus_acnt__btn cus_acnt__btn__solid" name="">Restart subscription</a>
                                                 {% else %}
                                                     <a href="javascript:;" id='cancelAccount' class="cancel-subBtn">Cancel subscription</a>
