--- a/static/sass/_cus_acnt_page.scss
+++ b/static/sass/_cus_acnt_page.scss
@@ -22,6 +22,7 @@
     font-weight: $weightBold;
     line-height: 1.5;
     text-decoration: none;
+    cursor:pointer;
 
     + .cus_acnt__btn {
       margin-left: 12px;
