--- a/static/sass/_cus_acnt_page.scss
+++ b/static/sass/_cus_acnt_page.scss
@@ -94,7 +94,7 @@
     }
 
     &-dataGrid {
-      margin-bottom: 40px;
+      // margin-bottom: 40px;
       &-item {
         @include flexbox;
         @include flex-direction(column, vertical);
